tests/cases/fail/index_assignment_out_of_range.cs
class Program {
    static void Main() {
        int[] a = new int[1];
        a[2] = 10;
    }
}
